--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,1 +1,5 @@
 @import "./vendor/bower_components/adminlte/build/less/AdminLTE.less";
+
+.dropdown-menu, .invoice {
+  border: solid 1px #DDDDDD;
+}
